--- a/4_Rule.html
+++ b/4_Rule.html
@@ -47,7 +47,6 @@
             transform: scale(1.1);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
-        
     </style>
     <!-- 引入 Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -56,9 +55,23 @@
 </head>
 
 <body>
-    <a href="5_Game.html">
-        <button id="floatButton">Next</button>
-    </a>
+    <audio id="clickSound" src="music/音效_點擊.mp3"></audio>
+    <button id="floatButton">Next</button>
+    <script>
+        const btn = document.getElementById("floatButton");
+        const sound = document.getElementById("clickSound");
+
+        btn.addEventListener("click", function () {
+            // 播放音效
+            sound.currentTime = 0;
+            sound.play();
+
+            // 等待音效播放 0.5 秒後再跳轉
+            setTimeout(() => {
+                window.location.href = "5_Game.html";
+            }, 500); // 你可以根據音效長度調整延遲時間
+        });
+    </script>
 </body>
 
 </html>
