--- a/5_Game.html
+++ b/5_Game.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('img/5_BackgroundGame.png');
+            background-image: url('img/5_BackgroundGame_1.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -19,6 +19,13 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
+        }
+
+        /* 手機寬度下使用不同背景圖 */
+        @media (max-width: 768px) {
+            body {
+                background-image: url('img/5_BackgroundGame_2.png');
+            }
         }
 
         .header {
@@ -335,11 +342,11 @@
                     if (selectedAnswer === topAnswer) {
                         // ✅ 這裡是分數最高而且選到了正確答案 → 執行你要的程式碼
                         console.log("選到最高分的答案！");
-                        
+
                         // 你要執行的程式碼寫在這裡 ↓↓↓↓↓↓
                         fireworks_O();
                     }
-                    else{
+                    else {
                         fireworks_X();
                     }
                 }
